; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_684.c_check.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_684.c_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca [128 x i8], align 16
  store i64 %0, i64* %2, align 8
  %4 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %5 = load i64, i64* %2, align 8
  %6 = call i32 @snprintf(i8* %4, i32 128, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i64 %5)
  %7 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %8 = call i32 @atoi(i8* %7)
  %9 = icmp slt i32 %8, 1
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i64, i64* %2, align 8
  %12 = add i64 %11, 256
  store i64 %12, i64* %2, align 8
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i64, i64* %2, align 8
  %15 = trunc i64 %14 to i32
  ret i32 %15
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i64) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
